--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+/assets/acl.yml
+/assets/addresses.json
+/assets/genesis.json
+
 # general
 .DS_Store
 .vscode
@@ -7,3 +11,6 @@
 # dotenv and direnv
 .env
 .envrc
+
+# container data volumes
+/data
