--- a/.env.sample.testnet
+++ b/.env.sample.testnet
@@ -22,5 +22,5 @@ SEQUENCER_KEY=
 PROPOSER_ADDRESS=
 PROPOSER_KEY=
 
-MESSAGE_RELAYER_ADDRESS=$SEQUENCER_ADDRESS
-MESSAGE_RELAYER_KEY=$SEQUENCER_KEY
+MESSAGE_RELAYER_ADDRESS=
+MESSAGE_RELAYER_KEY=
