--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+/docker-compose.override.yml
 /assets/acl.yml
 /assets/addresses.json
 /assets/genesis.json
