--- a/.env.sample.mainnet
+++ b/.env.sample.mainnet
@@ -6,6 +6,7 @@ L1_HTTP_URL=https://rpc.mainnet.oasys.games/
 L2GETH_HTTP_PORT=8545
 L2GETH_WS_PORT=8546
 DTL_HTTP_PORT=7878
+MESSAGE_RELAYER_PORT=7300
 
 # Layer2 settings
 L2_CHAIN_ID=
